--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,12 @@
+html,
+body {
+  background-color: #2c3e50;
+}
 #app {
   font-family: Avenir, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
-  color: #2c3e50;
+  color: #ececec;
   margin-top: 60px;
 }
